# cosapp

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.gitlab/issue_templates/: Bug.md  FeatureProposal.md  Release.md
.gitlab/merge_request_templates/: Default.md  Release.md
.nblink/: environment.yml  nblink-lock.json
benchmark/: test_ports.py  test_systems.py
benchmarks/: README.md  asv.conf.json  environment.yml
benchmarks/benchmark_suite/: benchmark_nonlinearsolver.py  benchmark_residue.py  benchmark_unknown.py
binder/: environment.yml  postBuild
conda.recipe/: meta.yaml
cosapp/: __init__.py
cosapp/base/: __init__.py
cosapp/core/: __init__.py  config.py  configuration_schema.json  connectors.py  eval_str.py  module.py  time.py  variableref.py
cosapp/core/execution/: __init__.py  comms.py  pool.py  task.py  worker.py
cosapp/core/numerics/: __init__.py  basics.py  boundary.py  enum.py  mathematicalproblem.schema.json  residues.py  root.py  sobol_seq.py  utils.py
cosapp/core/signal/: __init__.py  signal.py  slot.py
cosapp/core/tests/: conftest.py  test_AssignString.py  test_BaseConnector.py  test_CoSAppConfiguration.py  test_Connector.py  test_ContextLocals.py  test_DirectConnector.py  test_EvalString.py  test_Module.py  test_coSAppConfiguration.py  test_evalString.py  test_time.py
cosapp/drivers/: __init__.py  abstractsetofcases.py  abstractsolver.py  driver.py  fixedpoint.py  influence.py  iterativecase.py  lineardoe.py  metasystembuilder.py  montecarlo.py  nonlinearsolver.py  optimizer.py  optionaldriver.py  runonce.py  runoptim.py  runsinglecase.py  utils.py  validitycheck.py
cosapp/drivers/tests/: conftest.py  test_ConstraintParser.py  test_Driver.py  test_FixedPointSolver.py  test_NonLinearSolver.py  test_Optimizer.py  test_RunOnce.py  test_RunSingleCase.py  test_SystemAnalyzer.py  test_UnknownAnalizer.py  test_ValidityCheck.py  test_abstractSolver.py  test_abstractsetofcases.py  test_cosappsolver.py  test_dealias_problem.py  test_influence.py  test_iterativeCase.py  test_lineardoe.py  test_metasystembuilder.py  test_montecarlo.py  test_nonLinearSolver.py  test_optimization.py  test_optimizer.py  test_optionalDriver.py  test_runOptim.py  test_scipysolver.py
cosapp/drivers/time/: __init__.py  base.py  bdf.py  crank_nicolson.py  euler.py  implicit.py  interfaces.py  runge_kutta.py  scenario.py  utils.py
cosapp/multimode/: __init__.py  discreteStepper.py  event.py  zeroCrossing.py
cosapp/multimode/tests/: test_Event.py  test_EventDirection.py  test_MultimodeSystem.py  test_ZeroCrossing.py
cosapp/patterns/: __init__.py  observer.py  proxy.py  singleton.py  visitor.py
cosapp/patterns/tests/: test_Singleton.py  test_observer.py  test_visitor.py
cosapp/ports/: __init__.py  connectors.py  enum.py  exceptions.py  mode_variable.py  port.py  unit_library.ini  units.py  variable.py
cosapp/ports/tests/: conftest.py  test_BaseConnector.py  test_BasePort.py  test_Connector.py  test_DirectConnector.py  test_ExtensiblePort.py  test_ModeVarPort.py  test_ModeVariable.py  test_Port.py  test_Variable.py  test_scopedPort.py  test_units.py  test_variable.py
cosapp/recorders/: __init__.py  dataframe_recorder.py  dsv_recorder.py  recorder.py
cosapp/recorders/tests/: conftest.py  test_BaseRecorder.py  test_DSVRecorder.py  test_DataframeRecorder.py
cosapp/systems/: __init__.py  batch.py  externalsystem.py  metamodels.py  processsystem.py  structure.schema.json  surrogateclass.py  system.py  system.schema.json  systemConnector.py  systemSurrogate.py  systemfamily.py
cosapp/systems/surrogate_models/: __init__.py  kriging.py  multifi_cokriging.py  nearest_neighbor.py  response_surface.py  surrogate_model.py
cosapp/systems/tests/: conftest.py  test_BatchRunner.py  test_DynamicSystem.py  test_IterativeConnector.py  test_MultimodeSystem.py  test_SurrogateModelProxy.py  (+13 more)
cosapp/tests/: all_tests.py  complexturbofan.html  conftest.py  test_AbstractTimeDriver_integration.py  test_ComplexDuct.py  test_MathematicalProblem_integration.py  test_NonLinearSolver_integration.py  test_Turbofan.py  test_dynamics.py  test_electric_circuit.py  test_multimode.py  test_system_pressureloss.py  test_tutorials.py  test_unknown_aliasing.py  test_visitor_integration.py
cosapp/tools/: __init__.py  help.py  trigger.py
cosapp/utils/: 0-3-0_system.schema.json  0-4-0_system.schema.json  __init__.py  context.py  deprecation.py  find_variables.py  graph_analysis.py  helpers.py  json.py  logging.py  naming.py  options_dictionary.py  orderedset.py  parsing.py  pull_variables.py  search_for_variables.py  state_io.py  swap_system.py  testing.py  validate.py
docs/: conf.py  environment.yml  index.rst  installation.rst  license.rst  make.bat  readme.rst
docs/cosapp_theme/: layout.html  searchbox.html  theme.conf
docs/developer/: installation_cases.rst  logger.rst  project_structure.rst  scenarii.rst
docs/source/: modules.rst
docs/tools/: mermaid.py  mermaid_inheritance.py
docs/tutorials/: 00-Introduction.ipynb  01-Systems.ipynb  02-Ports.ipynb  03-Drivers.ipynb  03b-Advanced-Drivers.ipynb  04-Triggers.ipynb  05-Validation.ipynb  06-Visibility.ipynb  07-Metamodels.ipynb  08-Multipoints-Design.ipynb  09-MonteCarlo.ipynb  10-Recorders.ipynb  11-DesignMethods.ipynb  CustomConnectors.ipynb  FMI.ipynb  Guidelines.ipynb  HybridSimulations.ipynb  Logging.ipynb  Multiprocessing.ipynb  Optimization.ipynb  SwapSystems.ipynb  SystemSurrogates.ipynb  SystemSurrogatesAdvanced.ipynb  Targets.ipynb  TimeDriver.ipynb  TimeDriverAdvanced.ipynb  TipsAndTricks.ipynb  Visitors.ipynb  aa-SimpleCircuit.ipynb  exprampode_fmu.py  quickstart.ipynb  time_solutions.py
joss/: README.md  codemetadata.json  paper.bib  paper.md
jupyterlite/: build.py  environment.yml
jupyterlite/.cosapp.d/: cosapp_config.json
(+177 files in other folders)
