[metadata]
name = cosapp
version = attr: cosapp.core._version.__version__
author = CoSApp Development Team
home_page = https://cosapp.readthedocs.io
description = CoSApp, the Collaborative System Approach.
long_description = file: README.md, HISTORY.md
long_description_content_type= text/markdown
license = Apache-2.0
copyright = Copyright Safran SA
license_files = LICENSE.rst
keywords = cosapp, system simulation, system design
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[egg_info]
tag_build =

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = cosapp.tests.all_tests.suite
python_requires = >= 3.8
install_requires = 
	pandas
	jsonschema
	numpy>=1.12
	scipy
	wrapt
tests_require = 
	coverage
	pytest
	ipython
	jinja2
	pythonfmu
	watchdog
	openpyxl
	pythonfmu<0.6.3
	pyfmi

[options.extras_require]
extra =
	ipython
	jinja2
	pythonfmu<0.6.3
	watchdog
	openpyxl
tests = 
	coverage
	pytest
	pyfmi
docs = 
	sphinx
	nbsphinx>=0.6.0
	sphinx-copybutton
	sphinx-mdinclude
	jupyter_client
	ipykernel
	ipywidgets
	plotly
	pyfmi
	pytest

[bdist_wheel]
universal = 0

[tool:pytest]
addopts = --rootdir=cosapp --strict-markers -m "not notebook" -rfEx
filterwarnings =
	ignore::DeprecationWarning
markers =
	notebook: marks requiring Jupyter Notebook (usually slow)

[coverage:run]
source=
	cosapp
omit = 
	*/tests/*
	*/test_*
	*/conftest.py
	cosapp/tools/templates/*
	cosapp/utils/testing.py

[coverage:report]
exclude_lines = 
	pragma: no cover
	
	pass
	
	def __repr__
	def __str__
	
	raise AssertionError
	raise NotImplementedError
	
	except ImportError
	
	if 0:
	if __name__ == .__main__.:

[coverage:html]
directory = coverage/
